Add gist for the view options.

--- a/_posts/2014-01-12-view.md
+++ b/_posts/2014-01-12-view.md
@@ -39,6 +39,10 @@ This object is a computation of all options declared in the view.
   //{ myGreatOption: 7, myThirdOption: "niceOption", myOtherOption:21 }
 {% endhighlight %}
 
+When you have different behaviour for views, you can ajust options. A simple gist has been created in order to show you a set of possibilities.
+
+{% gist pierr/7030a6adad86be74597f %}
+
 ## Reference Lists
 
 In order to access a reference list in your view, you have to _ask_  for it in your view.
